--- a/src/js/mole-game/mole-game.css
+++ b/src/js/mole-game/mole-game.css
@@ -23,7 +23,7 @@
 }
 
 .hole_has-mole {
-    background-image: url("../../img/goblin.png");
+    background-image: url(https://github.com/netology-code/ahj-homeworks/blob/video/dom/pic/goblin.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
